force-app/main/default/objects/Account/fields/GH_atn_IdMedicoCRM__c.field-meta.xml
<CustomField>
    <fullName>GH_atn_IdMedicoCRM__c</fullName>
    <description>Campo para credencialización.</description>
    <displayFormat>Med-{0000}</displayFormat>
    <label>ID Medico CRM</label>
    <type>AutoNumber</type>
</CustomField>