force-app/main/default/objects/Account/fields/GH_ccy_Monto_Poliza_Seguro_Resp_Civil__c.field-meta.xml
<CustomField>
    <fullName>GH_ccy_Monto_Poliza_Seguro_Resp_Civil__c</fullName>
    <description>Monto de póliza de seguro de responsabilidad civil</description>
    <inlineHelpText>Monto de póliza de seguro de responsabilidad civil</inlineHelpText>
    <label>Monto Póliza Seguro de Resp. Civil</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>