force-app/main/default/objects/Account/fields/GH_ccy_Productividad_Importe__c.field-meta.xml
<CustomField>
    <fullName>GH_ccy_Productividad_Importe__c</fullName>
    <description>Importe facturado por el médico En los últimos 30 días naturales desde el día que se genera el rol de guardias.</description>
    <inlineHelpText>Importe facturado por el médico En los últimos 30 días naturales desde el día que se genera el rol de guardias.</inlineHelpText>
    <label>Productividad - Importe</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>