force-app/main/default/objects/Account/fields/GH_ckb_Baja_Solicitada__c.field-meta.xml
<CustomField>
    <fullName>GH_ckb_Baja_Solicitada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Baja Solicitada</label>
    <type>Checkbox</type>
</CustomField>