force-app/main/default/objects/Account/fields/GH_ckb_Listo_para_Aprobacion__c.field-meta.xml
<CustomField>
    <fullName>GH_ckb_Listo_para_Aprobacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Listo para Aprobación</label>
    <type>Checkbox</type>
</CustomField>