force-app/main/default/objects/Account/fields/GH_ckb_Quiere_Reiniciar_Crede__c.field-meta.xml
<CustomField>
    <fullName>GH_ckb_Quiere_Reiniciar_Crede__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check para cuando se desea Reiniciar Credencialización</description>
    <label>Quiere Reiniciar Credencialización</label>
    <type>Checkbox</type>
</CustomField>