force-app/main/default/objects/Account/fields/GH_dte_Fecha_de_Inicio_Crede__c.field-meta.xml
<CustomField>
    <fullName>GH_dte_Fecha_de_Inicio_Crede__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Campo de Credencialización</description>
    <label>Fecha de inicio de credencialización</label>
    <type>Date</type>
</CustomField>