force-app/main/default/objects/Account/fields/GH_dte_FechaTerminoCredencializacion__c.field-meta.xml
<CustomField>
    <fullName>GH_dte_FechaTerminoCredencializacion__c</fullName>
    <defaultValue>(TODAY() + 7)</defaultValue>
    <description>Campo para credencialización.</description>
    <label>Fecha termino credencializacion</label>
    <type>Date</type>
</CustomField>