force-app/main/default/objects/Account/fields/GH_dte_Vigencia_Poliza_Seguro_Resp__c.field-meta.xml
<CustomField>
    <fullName>GH_dte_Vigencia_Poliza_Seguro_Resp__c</fullName>
    <description>Vigencia de póliza de seguro de responsabilidad civil</description>
    <inlineHelpText>Vigencia de póliza de seguro de responsabilidad civil</inlineHelpText>
    <label>Vigencia Póliza de Seguro de Resp. Civil</label>
    <type>Date</type>
</CustomField>