force-app/main/default/objects/Account/fields/GH_eml_CorreoElectronico__c.field-meta.xml
<CustomField>
    <fullName>GH_eml_CorreoElectronico__c</fullName>
    <description>para credencialización, correo electrónico del médico</description>
    <label>Correo Electrónico</label>
    <type>Email</type>
</CustomField>