force-app/main/default/objects/Account/fields/GH_eml_CorreoElectronicoSecundario__c.field-meta.xml
<CustomField>
    <fullName>GH_eml_CorreoElectronicoSecundario__c</fullName>
    <description>Campo para credencialización</description>
    <label>Correo electrónico secundario</label>
    <type>Email</type>
</CustomField>