force-app/main/default/objects/Account/fields/GH_fla_Edad__c.field-meta.xml
<CustomField>
    <fullName>GH_fla_Edad__c</fullName>
    <description>Campo que calcula la edad en base al campo Fecha de Nacimiento</description>
    <formula>IF(ISBLANK(PersonBirthdate), NULL, YEAR(TODAY()) - YEAR(PersonBirthdate))</formula>
    <label>Edad</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>