force-app/main/default/objects/Account/fields/GH_fla_RangoEtario__c.field-meta.xml
<CustomField>
    <fullName>GH_fla_RangoEtario__c</fullName>
    <description>Campo que determina el rango etario del cliente en base a su edad.</description>
    <formula>IF(ISNULL(GH_fla_Edad__c), &quot;N/A&quot;, 
    IF(GH_fla_Edad__c &lt; 30, &quot;Menor a 30&quot;,
        IF(GH_fla_Edad__c &lt;= 40, &quot;30-40&quot;,
            IF(GH_fla_Edad__c &lt;= 50, &quot;41-50&quot;,
                IF(GH_fla_Edad__c &lt;= 60, &quot;51-60&quot;,
                    IF(GH_fla_Edad__c &lt;= 70, &quot;61-70&quot;,
                        &quot;Mayor a 70&quot;
                    )
                )
            )
        )
    )
)</formula>
    <label>Rango etario</label>
    <type>Text</type>
</CustomField>