force-app/main/default/objects/Account/fields/GH_lkp_Director_Medico_Corporativo__c.field-meta.xml
<CustomField>
    <fullName>GH_lkp_Director_Medico_Corporativo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Director Medico Corporativo</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>