force-app/main/default/objects/Account/fields/GH_lkp_Director_Medico_UH__c.field-meta.xml
<CustomField>
    <fullName>GH_lkp_Director_Medico_UH__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Director Medico UH</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>