force-app/main/default/objects/Account/fields/GH_lkp_Unidad_Hospitalaria__c.field-meta.xml
<CustomField>
    <fullName>GH_lkp_Unidad_Hospitalaria__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unidad Hospitalaria</label>
    <referenceTo>GH_Unidad_Hospitalaria__c</referenceTo>
    <relationshipLabel>Cuentas</relationshipLabel>
    <relationshipName>Cuentas</relationshipName>
    <type>Lookup</type>
</CustomField>