force-app/main/default/objects/Account/fields/GH_lkp_Vinculador_Corporativo__c.field-meta.xml
<CustomField>
    <fullName>GH_lkp_Vinculador_Corporativo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo aprobador vinculador corporativo</description>
    <label>Vinculador Corporativo</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>