force-app/main/default/objects/Account/fields/GH_nbr_NumeroDeRechazos__c.field-meta.xml
<CustomField>
    <fullName>GH_nbr_NumeroDeRechazos__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Campo para credencialización</description>
    <label>Número de rechazos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>