force-app/main/default/objects/Account/fields/GH_nbr_Productividad_Volumen__c.field-meta.xml
<CustomField>
    <fullName>GH_nbr_Productividad_Volumen__c</fullName>
    <description>Cantidad de intervenciones que tiene el médico En los últimos 30 días naturales desde el día que se genera el rol de guardias</description>
    <inlineHelpText>Cantidad de intervenciones que tiene el médico En los últimos 30 días naturales desde el día que se genera el rol de guardias</inlineHelpText>
    <label>Productividad - Volumen</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>