force-app/main/default/objects/Account/fields/GH_num_Avance_Campos_Credencializaci_n__c.field-meta.xml
<CustomField>
    <fullName>GH_num_Avance_Campos_Credencializaci_n__c</fullName>
    <description>Campo para almacenar el avance de los campos obligatorios en cada caso de credencialización</description>
    <label>Avance Campos Credencialización</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>