force-app/main/default/objects/Account/fields/GH_pct_Efectividad_Guardia__c.field-meta.xml
<CustomField>
    <fullName>GH_pct_Efectividad_Guardia__c</fullName>
    <description>Porcentaje de efectividad de los llamados</description>
    <inlineHelpText>Cálculo Score:

Médico que asistió a la guardia suma 1 punto
Médico que asistió con demora a la guardia suma 0.5 punto
Médico que no asistió a la guardia suma -0.5 punto
El porcentaje de efectividad será:

(score total del médico * 100) / total de llamados en el mes (universo)</inlineHelpText>
    <label>Efectividad Guardia</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>