force-app/main/default/objects/Account/fields/GH_pct_Porcentaje_de_Avance__c.field-meta.xml
<CustomField>
    <fullName>GH_pct_Porcentaje_de_Avance__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Campo donde se guarda el % de avance de credencialización</description>
    <label>Porcentaje de Avance</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>