force-app/main/default/objects/Account/fields/GH_phn_TelefonoCelular__c.field-meta.xml
<CustomField>
    <fullName>GH_phn_TelefonoCelular__c</fullName>
    <description>para credencialización, teléfono del médico</description>
    <label>Teléfono Celular</label>
    <type>Phone</type>
</CustomField>