force-app/main/default/objects/Account/fields/GH_phn_TelefonoCelularSecundario__c.field-meta.xml
<CustomField>
    <fullName>GH_phn_TelefonoCelularSecundario__c</fullName>
    <description>Campo para credencialización</description>
    <label>Teléfono celular secundario</label>
    <type>Phone</type>
</CustomField>