force-app/main/default/objects/Account/fields/GH_phn_TelefonoConsultorio__c.field-meta.xml
<CustomField>
    <fullName>GH_phn_TelefonoConsultorio__c</fullName>
    <description>para credencialización, teléfono de consultorio</description>
    <label>Teléfono de Consultorio</label>
    <type>Phone</type>
</CustomField>