force-app/main/default/objects/Account/fields/GH_phn_TelefonoConsultorioMac__c.field-meta.xml
<CustomField>
    <fullName>GH_phn_TelefonoConsultorioMac__c</fullName>
    <description>Teléfono de consultorio Mac</description>
    <inlineHelpText>Teléfono de consultorio Mac</inlineHelpText>
    <label>Teléfono de consultorio Mac</label>
    <type>Phone</type>
</CustomField>