force-app/main/default/objects/Account/fields/GH_pkl_AvisoDePrivacidad__c.field-meta.xml
<CustomField>
    <fullName>GH_pkl_AvisoDePrivacidad__c</fullName>
    <description>Campo para credencialización.</description>
    <label>Aviso de privacidad</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
                <label>✔️ SI</label>
            </value>
            <value>
                <fullName>NO</fullName>
                <label>❌ NO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>