force-app/main/default/objects/Account/fields/GH_pkl_BaseDeOrigen__c.field-meta.xml
<CustomField>
    <fullName>GH_pkl_BaseDeOrigen__c</fullName>
    <label>Base de origen</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Productividad</fullName>
            </value>
            <value>
                <fullName>Credencialización</fullName>
            </value>
            <value>
                <fullName>Directorio Mkt</fullName>
            </value>
            <value>
                <fullName>Productividad sin actividad</fullName>
            </value>
            <value>
                <fullName>Vinculación Médica</fullName>
            </value>
            <value>
                <fullName>Otra</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>