force-app/main/default/objects/Account/fields/GH_pkl_Cambio_tipoCredencializacion__c.field-meta.xml
<CustomField>
    <fullName>GH_pkl_Cambio_tipoCredencializacion__c</fullName>
    <label>Cambio de tipo de Credencialización</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Permanente</fullName>
            </value>
            <value>
                <fullName>Temporal</fullName>
            </value>
            <value>
                <fullName>Transitorio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>