force-app/main/default/objects/Account/fields/GH_pkl_Cobertura_de_Credenciales__c.field-meta.xml
<CustomField>
    <fullName>GH_pkl_Cobertura_de_Credenciales__c</fullName>
    <description>Campo de Credencialización</description>
    <label>Cobertura de Credenciales</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Credencial Completa</fullName>
                <label>✔️ Credencial Completa</label>
            </value>
            <value>
                <fullName>Credencial Incompleta</fullName>
                <label>❌ Credencial Incompleta</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>