force-app/main/default/objects/Account/fields/GH_pkl_ComprobanteDeDomicilio__c.field-meta.xml
<CustomField>
    <fullName>GH_pkl_ComprobanteDeDomicilio__c</fullName>
    <description>Campo de credencialización.</description>
    <label>Comprobante de domicilio</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
                <label>✔️ SI</label>
            </value>
            <value>
                <fullName>NO</fullName>
                <label>❌ NO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>