force-app/main/default/objects/Account/fields/GH_pkl_DirectorioMKt__c.field-meta.xml
<CustomField>
    <fullName>GH_pkl_DirectorioMKt__c</fullName>
    <description>Se selecciona del picklist que tendrá los siguiente valores:

Si
No</description>
    <label>Directorio MKt</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>