force-app/main/default/objects/Account/fields/GH_pkl_Especialidad_Principal__c.field-meta.xml
<CustomField>
    <fullName>GH_pkl_Especialidad_Principal__c</fullName>
    <label>Especialidad Principal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GH_Esp_Especialidades</valueSetName>
    </valueSet>
</CustomField>