force-app/main/default/objects/Account/fields/GH_pkl_EstadodelMedico__c.field-meta.xml
<CustomField>
    <fullName>GH_pkl_EstadodelMedico__c</fullName>
    <description>Para credencialización</description>
    <label>Estado del Médico</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Activo</fullName>
                <label>✔️ Activo</label>
            </value>
            <value>
                <fullName>Inactivo</fullName>
                <label>❌ Inactivo</label>
            </value>
            <value>
                <fullName>Inactivo_por_baja</fullName>
                <label>❌ Inactivo por baja</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>