force-app/main/default/objects/Account/fields/GH_pkl_EstadodePrivilegios__c.field-meta.xml
<CustomField>
    <fullName>GH_pkl_EstadodePrivilegios__c</fullName>
    <description>Para credencialización</description>
    <label>Estado de Privilegios</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Con Privilegios</fullName>
                <label>✔️ Con Privilegios</label>
            </value>
            <value>
                <fullName>Sin Privilegios</fullName>
                <label>❌ Sin Privilegios</label>
            </value>
            <value>
                <fullName>Inactivo</fullName>
                <label>❌ Inactivo</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>