force-app/main/default/objects/Account/fields/GH_pkl_Estatus__c.field-meta.xml
<CustomField>
    <fullName>GH_pkl_Estatus__c</fullName>
    <description>Campo para credencialización.</description>
    <label>Estatus</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>En Solicitud</fullName>
            </value>
            <value>
                <fullName>En Proceso</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
                <label>❌ Cancelado</label>
            </value>
            <value>
                <fullName>Privilegios Completo o Incompleto</fullName>
            </value>
            <value>
                <fullName>Aprobado</fullName>
                <label>✔️ Aprobado</label>
            </value>
            <value>
                <fullName>Rechazado</fullName>
                <label>❌ Rechazado</label>
            </value>
            <value>
                <fullName>Baja</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>