force-app/main/default/objects/Account/fields/GH_pkl_Motivo_de_Baja__c.field-meta.xml
<CustomField>
    <fullName>GH_pkl_Motivo_de_Baja__c</fullName>
    <label>Motivo de Baja</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mala praxis</fullName>
            </value>
            <value>
                <fullName>Prácticas no éticas</fullName>
            </value>
            <value>
                <fullName>Faltas administrativas graves</fullName>
            </value>
            <value>
                <fullName>Incumplimiento del Reglamento / Código de ético</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>