force-app/main/default/objects/Account/fields/GH_pkl_Motivo_de_Cancelacion__c.field-meta.xml
<CustomField>
    <fullName>GH_pkl_Motivo_de_Cancelacion__c</fullName>
    <label>Motivo de Cancelación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dirección admtiva. dió indicación de no seguir proceso</fullName>
            </value>
            <value>
                <fullName>Dirección médica dió indicación de no seguir proceso</fullName>
            </value>
            <value>
                <fullName>Médico no envió documentación</fullName>
            </value>
            <value>
                <fullName>Médico indica no estar interesado</fullName>
            </value>
            <value>
                <fullName>Cancelado por duplicidad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>