force-app/main/default/objects/Account/fields/GH_pkl_Motivo_de_Reactivacion__c.field-meta.xml
<CustomField>
    <fullName>GH_pkl_Motivo_de_Reactivacion__c</fullName>
    <label>Motivo de Reactivación</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mot1</fullName>
            </value>
            <value>
                <fullName>Mot2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>