force-app/main/default/objects/Account/fields/GH_pkl_MotivoPrivilegiosIncompletos__c.field-meta.xml
<CustomField>
    <fullName>GH_pkl_MotivoPrivilegiosIncompletos__c</fullName>
    <description>Motivo para indicar por qué se envía a aprobación sin cumplir con todos los documentos.</description>
    <inlineHelpText>Indique el motivo para indicar por qué se envía a aprobación sin cumplir con todos los documentos.</inlineHelpText>
    <label>Motivo de Privilegios Incompletos</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>GH_pkl_Cobertura_de_Credenciales__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Dirección</fullName>
                <isActive>false</isActive>
                <label>Dirección</label>
            </value>
            <value>
                <fullName>Dirección administrativa solicita seguir proceso</fullName>
            </value>
            <value>
                <fullName>Dirección médica corporativa solicita seguir proceso</fullName>
            </value>
            <value>
                <fullName>Dirección médica solicita seguir proceso</fullName>
            </value>
            <value>
                <fullName>Dirección regional solicita seguir proceso</fullName>
            </value>
            <value>
                <fullName>El monto de la póliza de seguro de responsabilidad civil es inferior a 1 mdp</fullName>
            </value>
            <value>
                <fullName>Esta en proceso la emisión de la cédula de especialidad</fullName>
            </value>
            <value>
                <fullName>Esta en proceso la emisión de la cédula de licenciatura</fullName>
            </value>
            <value>
                <fullName>Esta en proceso la emisión de la cédula de subespecialidad</fullName>
            </value>
            <value>
                <fullName>Esta en proceso la emisión del consejo de especialidad</fullName>
            </value>
            <value>
                <fullName>Esta en proceso la emisión del consejo de subespecialidad</fullName>
            </value>
            <value>
                <fullName>Esta en proceso la emisión del titulo de especialidad</fullName>
            </value>
            <value>
                <fullName>Esta en proceso la emisión del titulo de licenciatura</fullName>
            </value>
            <value>
                <fullName>Esta en proceso la emisión del titulo de subespecialidad</fullName>
            </value>
            <value>
                <fullName>Falta cédula profesional de especialidad</fullName>
            </value>
            <value>
                <fullName>Falta cédula profesional de licenciatura</fullName>
            </value>
            <value>
                <fullName>Falta cédula profesional de subespecialidad</fullName>
            </value>
            <value>
                <fullName>Falta de póliza de seguro de responsabilidad civil</fullName>
            </value>
            <value>
                <fullName>Falta título de especialidad</fullName>
            </value>
            <value>
                <fullName>Falta título de licenciatura</fullName>
            </value>
            <value>
                <fullName>Falta título de subespecialidad</fullName>
            </value>
            <value>
                <fullName>No está vigente la póliza de seguro de responsabilidad civil</fullName>
            </value>
            <value>
                <fullName>No se pudo verificar cédula de especialidad</fullName>
            </value>
            <value>
                <fullName>No se pudo verificar cédula de licenciatura</fullName>
            </value>
            <value>
                <fullName>No se pudo verificar cédula de subespecialidad</fullName>
            </value>
            <value>
                <fullName>No se pudo verificar consejo de especialidad</fullName>
            </value>
            <value>
                <fullName>No se pudo verificar consejo de subespecialidad</fullName>
            </value>
            <value>
                <fullName>No tiene consejo de especialidad</fullName>
            </value>
            <value>
                <fullName>No tiene consejo de subespecialidad</fullName>
            </value>
            <value>
                <fullName>No tiene vigente el consejo de especialidad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>