force-app/main/default/objects/Account/fields/GH_pkl_MotivoRechazo__c.field-meta.xml
<CustomField>
    <fullName>GH_pkl_MotivoRechazo__c</fullName>
    <label>Motivo de Rechazo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No cumple con documentación requerida</fullName>
            </value>
            <value>
                <fullName>La Unidad Hospitalaria no está interesada en que el médico pertenezca</fullName>
            </value>
            <value>
                <fullName>Grupo MAC no está interesado en que el médico pertenezca</fullName>
            </value>
            <value>
                <fullName>Los privilegios solicitados no son congruentes con su educación</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>