force-app/main/default/objects/Account/fields/GH_pkl_Origen__c.field-meta.xml
<CustomField>
    <fullName>GH_pkl_Origen__c</fullName>
    <defaultValue>IF( OR($UserRole.DeveloperName  =&apos;Ejecutivo_de_Ventas_Cel_UH&apos;,$UserRole.DeveloperName =&apos;Jefe_de_Ventas_Cel_UH&apos;),&apos;Transitorio&apos;,&apos;&apos;)</defaultValue>
    <label>Tipo de Credencialización Inicial</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Permanente</fullName>
            </value>
            <value>
                <fullName>Temporal</fullName>
            </value>
            <value>
                <fullName>Transitorio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>