force-app/main/default/objects/Account/fields/GH_pkl_Otros_diplomas_y_estudios__c.field-meta.xml
<CustomField>
    <fullName>GH_pkl_Otros_diplomas_y_estudios__c</fullName>
    <description>Otros diplomas y estudios</description>
    <label>Otros diplomas y estudios</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
                <label>✔️ SI</label>
            </value>
            <value>
                <fullName>NO</fullName>
                <label>❌ NO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>