force-app/main/default/objects/Account/fields/GH_pkl_Programa__c.field-meta.xml
<CustomField>
    <fullName>GH_pkl_Programa__c</fullName>
    <description>Campo para</description>
    <label>Programa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Red medica MAC</fullName>
            </value>
            <value>
                <fullName>Socios MAC</fullName>
            </value>
            <value>
                <fullName>Directorio MKT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>