force-app/main/default/objects/Account/fields/GH_pkl_QuirurgicoOClinico__c.field-meta.xml
<CustomField>
    <fullName>GH_pkl_QuirurgicoOClinico__c</fullName>
    <label>Quirúrgico o clínico</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quirúrgico</fullName>
            </value>
            <value>
                <fullName>Clínico</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>