force-app/main/default/objects/Account/fields/GH_pkl_SociosMAC__c.field-meta.xml
<CustomField>
    <fullName>GH_pkl_SociosMAC__c</fullName>
    <label>Socios MAC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>