force-app/main/default/objects/Account/fields/GH_pkl_Solicitud_de_Credencializacion__c.field-meta.xml
<CustomField>
    <fullName>GH_pkl_Solicitud_de_Credencializacion__c</fullName>
    <description>Campo de Credencialización</description>
    <label>Solicitud de Credencialización</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>