force-app/main/default/objects/Account/fields/GH_pkl_Subestado_de_Baja__c.field-meta.xml
<CustomField>
    <fullName>GH_pkl_Subestado_de_Baja__c</fullName>
    <label>Subestado de Baja</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Baja Aceptada</fullName>
            </value>
            <value>
                <fullName>Baja Rechazada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>